--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="author" content="سند القطامي, Sanad Alqutami">
+  <meta name="description" content="سند القطامي متخصص في مجال أمن المعلومات، يقدم حلولاً مبتكرة وخدمات متقدمة لحماية البيانات وضمان الأمن السيبراني.">
+  <meta name="keywords" content="سند القطامي, Sanad Alqutami, أمن معلومات, الأمن السيبراني, حماية البيانات, الأمن الرقمي">
+
     <title>Cybersecurity Nightmare</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
